Updates sirius-web & sirius-kernel